# rust_server

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  init.sql
src/: handlers.rs  main.rs  models.rs
