[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7.9"
axum-server = "0.7.1"
hyper = "1.5.1"
serde = {version = "1.0.215", features = ["derive"]}
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower-http = {version = "0.6.2", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }